--- a/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_variables.scss
+++ b/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_variables.scss
@@ -16,7 +16,6 @@ $blue-super-light: #eff4f8;
 $gray_form: #dbdfe2;
 $gray_text: #3f3f3f;
 $gray_light: #a6a8a9;
-$gray_info: #3c4143;
 $gray-super-light: #ececec;
 $gray-highlighting: #f3f3f3;
 $gray-highlight-font: #6b6b6b;
@@ -33,3 +32,11 @@ $red: #ed2c39;
 $red-super-light: #f6d6d0;
 
 $pink: #ed45aa;
+
+$width-question-editor: 445px;
+$filter-width: 360px;
+$hidden-filters: -400px;
+$filter-small: 300px;
+$hidden-filter-small:-330px;
+$export-types-margin: 335px;
+$small-export-types-margin: 265px;
